<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="personal.rowan.imgur.data.GallerySection"/>
        <import type="personal.rowan.imgur.data.GallerySort"/>
        <import type="personal.rowan.imgur.data.GallerySource"/>
        <import type="android.graphics.Typeface"/>

        <variable
                name="arguments"
                type="personal.rowan.imgur.data.GalleryArguments"/>
    </data>

    <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/cardview_light_background">

        <TextView
                android:id="@+id/section_hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:background="?attr/selectableItemBackground"
                android:textSize="22sp"
                app:isBold="@{arguments.section == GallerySection.HOT}"
                android:text="@string/bottom_sheet_section_hot" />

        <TextView
                android:id="@+id/section_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="?attr/selectableItemBackground"
                android:textSize="22sp"
                app:isBold="@{arguments.section == GallerySection.TOP}"
                android:text="@string/bottom_sheet_section_top" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:id="@+id/sort_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="?attr/selectableItemBackground"
                android:textSize="22sp"
                app:isBold="@{arguments.sort == GallerySort.TOP}"
                android:text="@string/bottom_sheet_sort_top" />

        <TextView
                android:id="@+id/sort_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="?attr/selectableItemBackground"
                android:textSize="22sp"
                app:isBold="@{arguments.sort == GallerySort.TIME}"
                android:text="@string/bottom_sheet_sort_time" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:background="@color/colorPrimary" />

        <TextView
                android:id="@+id/source_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="?attr/selectableItemBackground"
                android:textSize="22sp"
                app:isBold="@{arguments.source == GallerySource.NETWORK_ONLY}"
                android:text="@string/bottom_sheet_source_network" />

        <TextView
                android:id="@+id/source_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:background="?attr/selectableItemBackground"
                android:textSize="22sp"
                app:isBold="@{arguments.source == GallerySource.NETWORK_AND_DB}"
                android:text="@string/bottom_sheet_source_db" />

    </LinearLayout>
</layout>